--- a/app.json
+++ b/app.json
@@ -27,10 +27,21 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "assetBundlePatterns": [
+      "assets/fonts/*"
+    ],
+    "packageOpts": {
+      "fonts": [
+        {
+          "JuliusSansOne": "./assets/fonts/JuliusSansOne-Regular.ttf"
+        }
+      ]
     }
   }
 }
